Closed Bug 1745589 Opened 4 years ago Closed 4 years ago

Header bar background black on eOS 5.1.7

Categories

(Core :: Widget: Gtk, defect)

Desktop
Linux
defect

Tracking

()

VERIFIED FIXED
97 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox95 --- unaffected
firefox96 --- unaffected
firefox97 --- fixed

People

(Reporter: freaktechnik, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

With bug 1744496 the header bar background is now black on elementary OS 5.1.7 Hera (that's GTK 3.22.30 on Kernel 4.15.0-163 by Ubuntu 18.04.6 LTS). The corners appear to be transparent. The screenshot is with the default Firefox theme, so the header bar should have the default eOS gradient. This is also apparent by the text color on tabs, not shown in the screenshot.

When the window is maximized, the header bar has the expected background color.

Regression window by mozregression: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=00d3e0f20e2c8798f4ca39d2d84952222b1fdd5b&tochange=5ff985e01c654ce10096df52bfc2bb1b3af7b0c1

Thanks for filing! Do you happen to know which revision of the elementary GTK stylesheets is that version using?

Flags: needinfo?(martin)

Will try to poke either way though.

Flags: needinfo?(emilio)
Flags: needinfo?(emilio)

Even if it has a radius. This can happen in older ElementaryOS themes...

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Attachment #9254960 - Attachment description: Bug 1745589 - Ensure we also draw headerbar parent if the headerbar is transparent. r=stransky → Bug 1745589 - Ensure we also draw headerbar parent if the headerbar has no background. r=stransky
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/118ea02dc6f3 Ensure we also draw headerbar parent if the headerbar has no background. r=stransky

Set release status flags based on info from the regressing bug 1744496

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch
Status: RESOLVED → VERIFIED
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: