Bug 1745589 - Ensure we also draw headerbar parent if the headerbar has no background. r=stransky

Even if it has a radius. This can happen in older ElementaryOS themes...

Differential Revision: https://phabricator.services.mozilla.com/D133588